{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 35,
  "lineage": "8e06e99e-95c9-56b2-c779-b8080a5b84c5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:loadbalancer/app/tm-app-alb/24fe4bf691d0b20d",
            "arn_suffix": "app/tm-app-alb/24fe4bf691d0b20d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tm-app-alb-721532311.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:loadbalancer/app/tm-app-alb/24fe4bf691d0b20d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tm-app-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-08cbdbd98af9c2359"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04221b88f7b3ffb9e"
              },
              {
                "subnet_id": "subnet-0e77c191189865e2f"
              }
            ],
            "subnets": [
              "subnet-04221b88f7b3ffb9e",
              "subnet-0e77c191189865e2f"
            ],
            "tags": {
              "Env": "dev",
              "Name": "tm-app-alb",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tm-app-alb",
              "Project": "ecs-app"
            },
            "vpc_id": "vpc-08a330fad242e6162",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:loadbalancer/app/tm-app-alb/24fe4bf691d0b20d"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:listener/app/tm-app-alb/24fe4bf691d0b20d/acc3dbb3ee7dcd21",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:targetgroup/tm-app-tg/d72e7194d69af670",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:listener/app/tm-app-alb/24fe4bf691d0b20d/acc3dbb3ee7dcd21",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:loadbalancer/app/tm-app-alb/24fe4bf691d0b20d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:listener/app/tm-app-alb/24fe4bf691d0b20d/acc3dbb3ee7dcd21"
          },
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:listener/app/tm-app-alb/24fe4bf691d0b20d/bb41286fd65d5835",
            "certificate_arn": "arn:aws:acm:eu-west-2:565561497782:certificate/95e46622-fc8e-46fc-9808-b489a4ba0971",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:targetgroup/tm-app-tg/d72e7194d69af670",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:listener/app/tm-app-alb/24fe4bf691d0b20d/bb41286fd65d5835",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:loadbalancer/app/tm-app-alb/24fe4bf691d0b20d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:listener/app/tm-app-alb/24fe4bf691d0b20d/bb41286fd65d5835"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.app_alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:targetgroup/tm-app-tg/d72e7194d69af670",
            "arn_suffix": "targetgroup/tm-app-tg/d72e7194d69af670",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:targetgroup/tm-app-tg/d72e7194d69af670",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:565561497782:loadbalancer/app/tm-app-alb/24fe4bf691d0b20d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tm-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tm-app-tg",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tm-app-tg",
              "Project": "ecs-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:565561497782:targetgroup/tm-app-tg/d72e7194d69af670"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:security-group/sg-08cbdbd98af9c2359",
            "description": "Allow HTTP from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cbdbd98af9c2359",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "565561497782",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "alb-sg",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "alb-sg",
              "Project": "ecs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "sg-08cbdbd98af9c2359",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:security-group/sg-06985bf6f3f2186ec",
            "description": "Allow traffic from ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06985bf6f3f2186ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08cbdbd98af9c2359"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "565561497782",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "ecs-sg",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sg",
              "Project": "ecs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "sg-06985bf6f3f2186ec",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08179a470ffdd1456",
            "arn": "arn:aws:ec2:eu-west-2:565561497782:elastic-ip/eipalloc-08179a470ffdd1456",
            "association_id": "eipassoc-0f78ce7c7f6da169f",
            "domain": "vpc",
            "id": "eipalloc-08179a470ffdd1456",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-036765fcd2bdfddc4",
            "private_dns": "ip-10-0-1-176.eu-west-2.compute.internal",
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-35-179-60-17.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.179.60.17",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-nat-eip",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-nat-eip",
              "Project": "ecs-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:internet-gateway/igw-010eb759394f95c70",
            "id": "igw-010eb759394f95c70",
            "owner_id": "565561497782",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-igw",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-igw",
              "Project": "ecs-app"
            },
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08179a470ffdd1456",
            "association_id": "eipassoc-0f78ce7c7f6da169f",
            "connectivity_type": "public",
            "id": "nat-0f56a4e5ad9987ea3",
            "network_interface_id": "eni-036765fcd2bdfddc4",
            "private_ip": "10.0.1.176",
            "public_ip": "35.179.60.17",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e77c191189865e2f",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-nat-gw",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-nat-gw",
              "Project": "ecs-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034d2b42e561bb4621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f56a4e5ad9987ea3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-034d2b42e561bb462",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-034d2b42e561bb462"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-010eb759394f95c70",
            "id": "r-rtb-01a385890d3c6f4b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-01a385890d3c6f4b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-01a385890d3c6f4b8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:route-table/rtb-034d2b42e561bb462",
            "id": "rtb-034d2b42e561bb462",
            "owner_id": "565561497782",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f56a4e5ad9987ea3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-private-rt",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-private-rt",
              "Project": "ecs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "rtb-034d2b42e561bb462",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:route-table/rtb-01a385890d3c6f4b8",
            "id": "rtb-01a385890d3c6f4b8",
            "owner_id": "565561497782",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010eb759394f95c70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-public-rt",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-public-rt",
              "Project": "ecs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "rtb-01a385890d3c6f4b8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0233fbecabe7002f3",
            "region": "eu-west-2",
            "route_table_id": "rtb-034d2b42e561bb462",
            "subnet_id": "subnet-054b44348e3a336c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01deea0e8ce8232a8",
            "region": "eu-west-2",
            "route_table_id": "rtb-034d2b42e561bb462",
            "subnet_id": "subnet-04b6baa9d0e1f7320"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c150a943fa4a5c6",
            "region": "eu-west-2",
            "route_table_id": "rtb-01a385890d3c6f4b8",
            "subnet_id": "subnet-0e77c191189865e2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c40c4c89410f0fd",
            "region": "eu-west-2",
            "route_table_id": "rtb-01a385890d3c6f4b8",
            "subnet_id": "subnet-04221b88f7b3ffb9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:subnet/subnet-054b44348e3a336c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054b44348e3a336c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565561497782",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-private-1",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-private-1",
              "Project": "ecs-app"
            },
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "subnet-054b44348e3a336c1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:subnet/subnet-04b6baa9d0e1f7320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b6baa9d0e1f7320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565561497782",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-private-2",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-private-2",
              "Project": "ecs-app"
            },
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "subnet-04b6baa9d0e1f7320",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:subnet/subnet-0e77c191189865e2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e77c191189865e2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565561497782",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-public-1",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-public-1",
              "Project": "ecs-app"
            },
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "subnet-0e77c191189865e2f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:subnet/subnet-04221b88f7b3ffb9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04221b88f7b3ffb9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565561497782",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-public-2",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-public-2",
              "Project": "ecs-app"
            },
            "vpc_id": "vpc-08a330fad242e6162"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "subnet-04221b88f7b3ffb9e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565561497782:vpc/vpc-08a330fad242e6162",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bfdf8cf24314e52",
            "default_route_table_id": "rtb-0b65a7cf9d72cc51b",
            "default_security_group_id": "sg-0f624441f1fa21f31",
            "dhcp_options_id": "dopt-0feae55604b221f89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a330fad242e6162",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b65a7cf9d72cc51b",
            "owner_id": "565561497782",
            "region": "eu-west-2",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc",
              "Project": "ecs-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc",
              "Project": "ecs-app"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565561497782",
            "id": "vpc-08a330fad242e6162",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}